[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semdiff"
version = "0.1.0"
description = "Semantic Diff using Local AI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pyperclip>=1.8.2",
]

[project.scripts]
semdiff = "main:app"
